--- a/plugins/raster_stretch_2_98/raster_stretch_dockwidget_base.ui
+++ b/plugins/raster_stretch_2_98/raster_stretch_dockwidget_base.ui
@@ -6,76 +6,200 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>606</width>
-    <height>502</height>
+    <width>406</width>
+    <height>570</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>RasterStretch</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="1" alignment="Qt::AlignRight|Qt::AlignTop">
+    <item row="0" column="3" alignment="Qt::AlignTop">
      <widget class="QLabel" name="label_2">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="text">
        <string>Choose raster to render</string>
       </property>
      </widget>
     </item>
-    <item row="0" column="3" alignment="Qt::AlignTop">
+    <item row="1" column="3" colspan="4">
      <widget class="QComboBox" name="comboBox"/>
     </item>
-    <item row="1" column="1" alignment="Qt::AlignHCenter|Qt::AlignTop">
-     <widget class="QLabel" name="minValText">
+    <item row="6" column="5">
+     <widget class="QCheckBox" name="checkBoxNoData">
+      <property name="text">
+       <string>set nodata</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="6" alignment="Qt::AlignHCenter">
+     <widget class="QLabel" name="label_6">
+      <property name="text">
+       <string>upper</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="6">
+     <widget class="QLineEdit" name="lineEditNoData">
       <property name="enabled">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="maximumSize">
        <size>
-        <width>16777215</width>
-        <height>500000</height>
+        <width>50</width>
+        <height>16777215</height>
        </size>
       </property>
-      <property name="text">
-       <string>-</string>
+      <property name="inputMask">
+       <string>#######</string>
+      </property>
+      <property name="cursorPosition">
+       <number>0</number>
       </property>
      </widget>
     </item>
-    <item row="2" column="2" alignment="Qt::AlignRight">
-     <widget class="QLabel" name="label_4">
-      <property name="text">
-       <string>max</string>
+    <item row="9" column="4">
+     <spacer name="verticalSpacer">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
       </property>
-     </widget>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
     </item>
-    <item row="2" column="0" alignment="Qt::AlignRight">
+    <item row="4" column="0">
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="3" column="4">
      <widget class="QLabel" name="label_3">
       <property name="text">
-       <string>min</string>
+       <string>percentile:</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="0" alignment="Qt::AlignRight|Qt::AlignTop">
-     <widget class="QLabel" name="label_5">
+    <item row="2" column="5" alignment="Qt::AlignHCenter">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>lower</string>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="5" colspan="2">
+     <widget class="QPushButton" name="Apply">
+      <property name="text">
+       <string>Apply</string>
+      </property>
+     </widget>
+    </item>
+    <item row="7" column="5">
+     <spacer name="verticalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Fixed</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="3" column="6">
+     <widget class="QDoubleSpinBox" name="maxPercVal">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
-      <property name="text">
-       <string>Current min/max:</string>
+      <property name="minimumSize">
+       <size>
+        <width>15</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>100</width>
+        <height>50</height>
+       </size>
+      </property>
+      <property name="maximum">
+       <double>100.000000000000000</double>
+      </property>
+      <property name="value">
+       <double>98.000000000000000</double>
       </property>
      </widget>
     </item>
-    <item row="1" column="3" alignment="Qt::AlignHCenter|Qt::AlignTop">
-     <widget class="QLabel" name="maxValText">
+    <item row="3" column="5">
+     <widget class="QDoubleSpinBox" name="minPercVal">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>60</width>
+        <height>50</height>
+       </size>
+      </property>
+      <property name="baseSize">
+       <size>
+        <width>0</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="value">
+       <double>2.000000000000000</double>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="4" colspan="3" alignment="Qt::AlignHCenter">
+     <widget class="QLabel" name="nodataText">
       <property name="maximumSize">
        <size>
         <width>16777215</width>
@@ -84,30 +208,6 @@
       </property>
       <property name="text">
        <string>-</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="3">
-     <widget class="QPushButton" name="Apply">
-      <property name="text">
-       <string>Apply</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="1">
-     <widget class="QDoubleSpinBox" name="minPercVal">
-      <property name="value">
-       <double>2.000000000000000</double>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="3">
-     <widget class="QDoubleSpinBox" name="maxPercVal">
-      <property name="maximum">
-       <double>100.000000000000000</double>
-      </property>
-      <property name="value">
-       <double>98.000000000000000</double>
       </property>
      </widget>
     </item>
