--- a/plugins/map_branding/map_branding_dialog_base.ui
+++ b/plugins/map_branding/map_branding_dialog_base.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>788</width>
+    <width>796</width>
     <height>400</height>
    </rect>
   </property>
@@ -49,7 +49,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>4</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="tabBranding">
     <attribute name="title">
@@ -59,7 +59,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>10</y>
+       <y>20</y>
        <width>351</width>
        <height>291</height>
       </rect>
@@ -225,6 +225,333 @@
     <attribute name="title">
      <string>Decorations</string>
     </attribute>
+    <widget class="QGroupBox" name="northArroyBox">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>10</y>
+       <width>321</width>
+       <height>151</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>North Arrow</string>
+     </property>
+     <widget class="QComboBox" name="comboBox">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>20</y>
+        <width>231</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <item>
+       <property name="text">
+        <string>Style1</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Style2</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Style3</string>
+       </property>
+      </item>
+     </widget>
+     <widget class="QLabel" name="label_5">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>20</y>
+        <width>31</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Style:</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="lockToTrueNorth">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>50</y>
+        <width>111</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Lock to true north</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_6">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>80</y>
+        <width>71</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Position:</string>
+      </property>
+     </widget>
+     <widget class="QSlider" name="horizontalSlider_2">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>120</y>
+        <width>231</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_7">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>120</y>
+        <width>41</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Size:</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBox_4">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>80</y>
+        <width>69</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <item>
+       <property name="text">
+        <string>Top Left</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Top Right</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Bottom Left</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Bottom Right</string>
+       </property>
+      </item>
+     </widget>
+    </widget>
+    <widget class="QGroupBox" name="scaleBarBox">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>180</y>
+       <width>321</width>
+       <height>161</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>Scale Bar</string>
+     </property>
+     <widget class="QLabel" name="label_8">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>20</y>
+        <width>31</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Style:</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBox_2">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>20</y>
+        <width>241</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <item>
+       <property name="text">
+        <string>Single Box</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Double Box</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Line Ticks Middle</string>
+       </property>
+      </item>
+     </widget>
+     <widget class="QLabel" name="label_9">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>60</y>
+        <width>41</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Units:</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBox_3">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>60</y>
+        <width>81</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <item>
+       <property name="text">
+        <string>Project</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>m</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>km</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>ft</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>mi</string>
+       </property>
+      </item>
+     </widget>
+     <widget class="QLabel" name="label_10">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>100</y>
+        <width>61</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Segments:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_11">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>140</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Font:</string>
+      </property>
+     </widget>
+     <widget class="QSpinBox" name="spinSegmentsLeft">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>100</y>
+        <width>42</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QSpinBox" name="spinSegmentsRight">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>100</y>
+        <width>42</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QSpinBox" name="spinScaleHeight">
+      <property name="geometry">
+       <rect>
+        <x>230</x>
+        <y>100</y>
+        <width>42</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_12">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>100</y>
+        <width>16</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>L</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_13">
+      <property name="geometry">
+       <rect>
+        <x>200</x>
+        <y>100</y>
+        <width>16</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>R</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_14">
+      <property name="geometry">
+       <rect>
+        <x>280</x>
+        <y>100</y>
+        <width>16</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>H</string>
+      </property>
+     </widget>
+    </widget>
    </widget>
    <widget class="QWidget" name="tabMetadata">
     <attribute name="title">
@@ -246,7 +573,7 @@
        <x>20</x>
        <y>9</y>
        <width>321</width>
-       <height>101</height>
+       <height>121</height>
       </rect>
      </property>
      <property name="title">
@@ -257,7 +584,7 @@
        <rect>
         <x>10</x>
         <y>20</y>
-        <width>61</width>
+        <width>41</width>
         <height>16</height>
        </rect>
       </property>
@@ -278,37 +605,72 @@
        <string>Height</string>
       </property>
      </widget>
+     <widget class="QLabel" name="textHeight">
+      <property name="geometry">
+       <rect>
+        <x>210</x>
+        <y>20</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QSlider" name="sizeScaler">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>50</y>
+        <width>160</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
      <widget class="QSpinBox" name="spinWidth">
       <property name="geometry">
        <rect>
-        <x>60</x>
+        <x>50</x>
         <y>20</y>
         <width>81</width>
         <height>22</height>
        </rect>
       </property>
+      <property name="maximum">
+       <number>999999</number>
+      </property>
      </widget>
-     <widget class="QSpinBox" name="spinHeight">
+     <widget class="QSpinBox" name="spinHeigth">
       <property name="geometry">
        <rect>
         <x>220</x>
         <y>20</y>
-        <width>71</width>
+        <width>81</width>
         <height>22</height>
        </rect>
+      </property>
+      <property name="maximum">
+       <number>999999</number>
       </property>
      </widget>
      <widget class="QCheckBox" name="chkTransparent">
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>60</y>
+        <y>90</y>
         <width>201</width>
         <height>17</height>
        </rect>
       </property>
       <property name="text">
-       <string>Transparent Background</string>
+       <string>Transparent Backgroung</string>
       </property>
      </widget>
     </widget>
@@ -316,9 +678,9 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>120</y>
+       <y>140</y>
        <width>321</width>
-       <height>101</height>
+       <height>81</height>
       </rect>
      </property>
      <property name="title">
